--- a/KGSWebAGVSystemAPITests.csproj
+++ b/KGSWebAGVSystemAPITests.csproj
@@ -7,7 +7,8 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-    <AssemblyVersion>1.0.240.5</AssemblyVersion>
+    <AssemblyVersion>1.0.306.0</AssemblyVersion>
+    <FileVersion>1.0.306.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
